[package]
name = "scan-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime
tokio = { version = "1.36", features = ["full"] }

# Raw Networking & Packet Crafting
pnet = "0.34"
pnet_packet = "0.34"

# CLI & Nmap wrapper execution
quick-xml = { version = "0.31", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.10.1"
clap = { version = "4.6.1", features = ["derive"] }
